# django-htmx-tailwind-projectkit

./: .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml
.helix/: ignore  languages.toml
src/: .env.dist  gunicorn.conf.py
src/config/: settings.py  urls.py  views.py
src/project_name/: settings.py
src/static/css/: main.css
src/static/pre/: input.css
src/templates/: _base.html  index.html
